<resources>
    <string name="app_name">Frinsa Hpp</string>
    <string name="www_javafrinsaestate_com">www.javafrinsaestate.com</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn_masuk">Masuk</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="varietas">Varietas</string>
    <string name="tgl_input">DD/MM/YYYY</string>
    <string name="blok">Blok</string>
    <string name="berat">Berat</string>
    <string name="kolektif_dari">Kolektif Dari</string>
    <string name="biaya">Biaya</string>
    <string name="proses">Proses</string>
    <string name="tmbh_varietas">Masukkan Varietas Baru</string>
    <string name="batal">Batal</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="beli_dari_kebun_lain">Beli dari kebun lain</string>
    <string name="isi_nanti">Isi nanti</string>
    <string name="tidak">tidak</string>
    <string name="ya">ya</string>
    <string name="cv_frinsa_agrolestari">CV FRINSA AGROLESTARI</string>
    <string name="kirim">kirim</string>
    <string name="lanjutkan_produksi">LANJUTKAN\nPRODUKSI</string>
    <string name="mulai_produksi">MULAI\nPRODUKSI</string>
    <string name="daftar_produksi">DAFTAR\nPRODUKSI</string>
    <string name="kembali">Kembali ke Dashboard</string>
    <string name="value">Value</string>
    <string name="tahap">Tahap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ongkos_petik">Ongkos Petik</string>
    <string name="ojek">Ojek</string>
    <string name="ongkos_cuci">Ongkos Cuci</string>
    <string name="total_biaya">Total Biaya</string>
    <string name="ongkos_muat">Ongkos Muat</string>
    <string name="tanggal">Tanggal</string>
    <string name="ongkos_transportasi">Ongkos Transportasi</string>
    <string name="ongkos_pengawalan">Ongkos Pengawalan</string>
    <string name="ongkos_bongkar">Ongkos Bongkar</string>
    <string name="ongkos_hulling">Ongkos Hulling</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="ongkos_suton_grading">Ongkos Suton Grading</string>
    <string name="ongkos_size_grading">Ongkos Size Grading</string>
    <string name="ongkos_color_sorter">Ongkos Color Sorter</string>
    <string name="ongkos_hand_pick">Ongkos Hand Pick</string>
    <string name="ongkos_pulping">Ongkos Pulping</string>
    <string name="ongkos_jemur">Ongkos Jemur</string>
    <string name="ongkos_fermentasi">Ongkos Fermentasi</string>
    <string name="panen">P\nA\nN\nE\nN</string>
    <string name="beli">B\nE\nL\nI</string>
    <string name="beli_dari">Beli dari</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="ceri">Ceri</string>
    <string name="gabah">Gabah</string>
    <string name="asalan">Asalan</string>
    <string name="kadar_air">Kadar Air</string>
    <string name="fermentasi">Fermentasi</string>
    <string name="transportasi">Transportasi</string>
    <string name="pulping_ceri_gabah_basah">Pulping: Ceri - Gabah Basah</string>
    <string name="masukkan_nama_proses_baru">Masukkan nama proses baru</string>
    <string name="tambah_varietas_baru">Tambah Varietas Baru</string>
    <string name="tambah_blok_baru">Tambah Blok Baru</string>
    <string name="tambah_proses_baru">Tambah Proses Baru</string>
    <string name="pilih_tahapan_proses">Pilih Tahapan Proses!</string>
    <string name="pulping">Pulping</string>
    <string name="jemur_dengan_kadar_air">Jemur (dengan kadar air)</string>
    <string name="jemur_i">Jemur I</string>
    <string name="jemur_ii">Jemur II (sesudah hulling)</string>
    <string name="hulling">Hulling</string>
    <string name="suton_grader">Suton Grader</string>
    <string name="size_grading">Size Grading</string>
    <string name="color_sorter">Color Sorter</string>
    <string name="hand_pick">Hand Pick</string>
    <string name="petik">Petik/Beli</string>
    <string name="ok">OK</string>
    <string name="teks_help">Pilih tahapan proses yang sudah disediakan yang sesuai dengan kebutuhan yang akan di inputkan!\n\nLalu urutkan tahapan proses yang sudah dipilih!</string>
    <string name="silahkan_tunggu">Silahkan Tunggu...</string>
    <string name="pilih">Pilih</string>
    <string name="Import">Import</string>
    <string name="Export">Export</string>

    <string name="source_google_drive">Google Drive</string>
    <string name="start_drive">Start Google Drive</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="status_logged_out">Logged Out</string>
    <string name="status_logged_in">Logged In</string>
    <string name="status_user_cancelled">User Cancelled</string>
    <string name="status_error">We found a problem: %1$s</string>
    <string name="not_open_file">Could not open file</string>
</resources>