<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tahapan_proses.jemurKadarAir_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_panen1"
            style="@style/Card">

            <LinearLayout style="@style/InsideCard">

                <TextView
                    style="@style/Teks.TV"
                    android:layout_marginBottom="10dp"
                    android:text="@string/varietas" />

                <TextView
                    android:id="@+id/tv_varietas_jemurKadarAir"
                    style="@style/Teks.Value"
                    android:text="@string/value"
                    android:textSize="15sp" />

                <TextView
                    style="@style/Teks.TV"
                    android:layout_marginBottom="10dp"
                    android:text="@string/blok" />

                <TextView
                    android:id="@+id/tv_blok_jemurKadarAir"
                    style="@style/Teks.Value"
                    android:text="@string/value"
                    android:textSize="15sp" />

                <TextView
                    style="@style/Teks.TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/input_tgl_jemurKadarAir"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/tgl_input"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_datepicker_jemurKadarAir"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:background="@drawable/button_input"
                        android:text="Pilih Tanggal"
                        android:textSize="10sp" />
                </LinearLayout>


                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/berat" />

                <EditText
                    android:id="@+id/et_berat_jemurKadarAir"
                    style="@style/ET"
                    android:inputType="number" />

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/kadar_air" />

                <EditText
                    android:id="@+id/et_kadar_air_jemurKadarAir"
                    style="@style/ET"
                    android:inputType="number" />

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/biaya" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Teks.TV"
                        android:text="@string/ongkos_jemur" />

                    <EditText
                        android:id="@+id/et_ongkos_jemur_jemurKadarAir"
                        style="@style/ET.Biaya"
                        android:inputType="number" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_kirim_jemurKadarAir"
            style="@style/Button.Kirim"
            android:layout_below="@+id/card_panen1"
            android:background="@drawable/btn_kirim"
            android:elevation="10dp"
            android:text="@string/kirim" />
    </RelativeLayout>

</FrameLayout>