<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    tools:context=".InputPanen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_panen"
            style="@style/Card"
            app:cardElevation="6dp">

            <LinearLayout style="@style/InsideCard">

                <RadioGroup
                    android:id="@+id/rg_bentuk_beli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/rb_ceri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ceri" />

                    <RadioButton
                        android:id="@+id/rb_gabah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gabah" />

                    <RadioButton
                        android:id="@+id/rb_asalan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asalan" />
                </RadioGroup>

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/tanggal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/input_tgl_beli"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/tgl_input"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btn_datepicker_beli"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:background="@drawable/button_input"
                        android:text="Pilih Tanggal"
                        android:textSize="10sp" />
                </LinearLayout>

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/varietas" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_varietas_beli"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/btn_spinner"
                        android:textAlignment="center" />

                    <Button
                        android:id="@+id/btn_tmbh_varietas_beli"
                        style="@style/Teks.White"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_toEndOf="@+id/spinner_varietas_beli"
                        android:background="@drawable/btn_add_spinner"
                        android:text="+"
                        android:textSize="20sp" />

                </RelativeLayout>

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/blok" />

                <EditText
                    android:id="@+id/et_blok_beli"
                    style="@style/ET"
                    android:inputType="text" />

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/berat" />

                <EditText
                    android:id="@+id/et_berat_beli"
                    style="@style/ET"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/beli_dari" />

                <EditText
                    android:id="@+id/et_kolektif_beli"
                    style="@style/ET"
                    android:inputType="text" />

                <TextView
                    style="@style/Teks.TV"
                    android:text="@string/biaya" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Teks.TV"
                        android:text="@string/harga_beli" />

                    <EditText
                        android:id="@+id/et_harga_beli"
                        style="@style/ET"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/tv_cuci_beli"
                        style="@style/Teks.TV"
                        android:text="@string/ongkos_cuci" />

                    <EditText
                        android:id="@+id/et_ongkos_cuci_beli"
                        style="@style/ET"
                        android:inputType="number" />
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_proses"
                        style="@style/Teks.TV"
                        android:text="@string/proses" />

                    <CheckBox
                        android:id="@+id/cb_isi_nanti_beli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/isi_nanti"
                        android:textAlignment="textEnd" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_proses_beli"
                        android:layout_width="150dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/btn_spinner2"
                        android:textAlignment="center" />


                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_kirim_beli"
            style="@style/Button.Kirim"
            android:layout_below="@+id/card_panen"
            android:background="@drawable/btn_kirim"
            android:elevation="10dp"
            android:text="@string/kirim" />
    </RelativeLayout>

</ScrollView>